--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "email-validator": "^2.0.4",
     "express": "4.17.1",
     "express-rescue": "1.1.30",
+    "give-me-date": "^1.0.2",
     "joi": "^17.6.0"
   },
   "devDependencies": {
